<resources>
    <string name="app_name">A4</string>
    <string name="title_home">Recognition</string>
    <string name="title_library">Library</string>
    <string name="title_addition">Addition</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="recognize">Recognize</string>
    <string name="gesture_thumbnail">Gesture Thumbnail</string>
    <string name="gesture_name">Gesture Name</string>
    <string name="delete">Delete</string>
    <string name="first_gesture_thumbnail">First Gesture Thumbnail</string>
    <string name="second_gesture_thumbnail">Second Gesture Thumbnail</string>
    <string name="third_gesture_thumbnail">Third Gesture Thumbnail</string>
</resources>