<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gestureThumbnail"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:text="@string/gesture_thumbnail"
        android:contentDescription="@string/gesture_thumbnail"/>
    <TextView
        android:id="@+id/gestureName"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/gestureThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/gesture_name"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_marginEnd="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>